# rlm-playground

./: .dockerignore  .gitignore  .prettierignore  README.md  docker-compose.yml  package-lock.json  package.json  turbo.json
apps/backend/: .dockerignore  .env.example  Dockerfile  package.json  pyproject.toml
apps/backend/app/: __init__.py  main.py
apps/backend/app/api/: __init__.py  router.py
apps/backend/app/core/: __init__.py  config.py
apps/backend/app/domains/: __init__.py
apps/backend/app/domains/datasets/: __init__.py  router.py  schemas.py  service.py
apps/backend/app/domains/datasets/loaders/: __init__.py  cache.py  longbench.py
apps/backend/app/domains/rlm/: __init__.py  controller.py  router.py  schemas.py  service.py
apps/backend/app/domains/rlm/dspy/: __init__.py  setup.py  signature.py  status_provider.py
apps/backend/app/domains/rlm/repl/: __init__.py  repl.py  worker.py
apps/backend/app/rlm/dspy/: signature.py  status_provider.py
apps/backend/scripts/: precache_datasets.py
apps/backend/tests/: __init__.py  conftest.py  test_rlm_streaming.py  test_ws.py
apps/frontend/: Dockerfile  eslint.config.mjs  next.config.ts  nginx.conf  package.json
apps/frontend/src/: providers.tsx
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/features/rlm/: constants.ts  types.ts
apps/frontend/src/features/rlm/api/: datasets.ts
apps/frontend/src/features/rlm/components/: Editor.tsx  QueryForm.tsx  StepCard.tsx  ThemeToggle.tsx  TrajectoryPanel.tsx  TrajectoryTree.tsx  TrajectoryViewer.tsx  TreeNode.tsx  index.ts
(+6 files in other folders)
